--- a/index.html
+++ b/index.html
@@ -552,6 +552,28 @@
             <h2 class="text-uppercase u-heading-v2__title g-font-weight-800 g-font-size-30 g-font-size-40--md">Events</h2> </div>
         </div>
         <div class="card-deck g-mx-20 g-my-20">
+          <div class="card"> <img class=" event-images" src="./assets/custom/img/events/2018race.jpg" alt="2018 Leesburg 5k/20k Race">
+            <div class="card-body">
+              <h4 class="card-title"><a href="https://photos.app.goo.gl/Xz9Pd53AhmMiF6Fw5" target="_blank" rel="noopener">2018 Leesburg 5k/20k</a></h4>
+              <p class="card-text">Many employees ran in the 2018 Leesburg 5k/20k race. We also had a really fun design for the race shirt thanks to the daughter of a Case Employee!</p>
+            </div>
+          </div>
+          <div class="card"> <img class=" event-images" src="./assets/custom/img/events/2018internship.jpg" alt="2018 Summer Internship">
+            <div class="card-body">
+              <h4 class="card-title"><a href="https://photos.app.goo.gl/K1HsUTjAbVQ8sBUY8" target="_blank" rel="noopener">2018 Summer Internship</a></h4>
+              <p class="card-text">We had an awesome summer with our interns which included several presentations to the company, seeing Solo: A Star Wars Story, taking in a D.C. United game in a downpour, and some Top Golf!</p>
+            </div>
+          </div>
+          <div class="card"> <img class=" event-images" src="./assets/custom/img/events/solo.jpg" alt="Solo: A Star Wars Story">
+            <div class="card-body">
+              <h4 class="card-title"><a href="https://photos.app.goo.gl/WUShWChoVdi4DCep9" target="_blank" rel="noopener">Solo: A Star Wars Story</a></h4>
+              <p class="card-text">We got the internship kicked off with a company movie event to see Solo: A Star Wars Story.</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="collapse" id="collapseEvents">
+          <div class="card-deck g-mx-20 g-my-20">
           <div class="card"> <img class=" event-images" src="./assets/custom/img/events/2017holiday_min.jpg" alt="2017 Holiday Party">
             <div class="card-body">
               <h4 class="card-title"><a href="https://photos.app.goo.gl/2U6zL2tz3Lou17ca2" target="_blank" rel="noopener">2017 Holiday Party</a></h4>
@@ -570,9 +592,6 @@
               <p class="card-text">We always have a good time getting together with each other and our families. This year we had ponies, a bounce house, face painting, and a whole lot of fun! Thanks to everyone for coming out!</p>
             </div>
           </div>
-        </div>
-
-        <div class="collapse" id="collapseEvents">
           <div class="card-deck g-mx-20 g-my-20">
             <div class="card"> <img class=" event-images" src="./assets/custom/img/events/2017csrc_min.jpg" alt="Recruiting @ VT CSRC Career Fair">
               <div class="card-body">
