paul-changes: made some formatting and content changes on intern page and working on the testimonial carousel

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div class="container-fluid justify-content-between g-pos-rel">
               <!-- Logo -->
               <a href="#body" class="js-go-to navbar-brand u-header__logo" data-type="static">
-                <img class="u-header__logo-img u-header__logo-img--main g-width-110" src="./assets/custom/img/case/logo-banner.gif" alt="Case Consulting">
+                <img class="u-header__logo-img u-header__logo-img--main g-width-110" src="./assets/custom/img/case/logo-banner.gif" alt="Case Consulting, Inc.">
               </a>
               <!-- End Logo -->
 
