internship-page-changes: updated intern section on index.html

--- a/index.html
+++ b/index.html
@@ -561,9 +561,9 @@
         <div class="container-fluid">
           <div class="container text-center g-max-width-750 g-mb-20 g-pt-70">
             <div class="u-heading-v2-2--bottom g-brd-primary g-mb-20">
-              <h2 class="text-uppercase u-heading-v2__title g-font-weight-800 g-font-size-30 g-font-size-40--md g-color-white">Internship</h2>
+              <h2 class="text-uppercase u-heading-v2__title g-font-weight-800 g-font-size-30 g-font-size-40--md g-color-white">Summer Internship</h2>
             </div>
-            <p>
+            <p class="g-color-white">
               Summer Internships take place from May to August in the
               Make Offices in Reston, Virginia, within the metropolitan
               area of Washington, D.C. The interns will design and
