internship-page-changes: reformatted the FAQ section so each question and response is in a separate row

--- a/intern.html
+++ b/intern.html
@@ -124,7 +124,7 @@
     </section>
     <!-- END REVOLUTION SLIDER -->
 
-    <!-- Benefits Section Content -->
+    <!-- About Section Content -->
     <section id="overview" class="g-py-20">
       <div class="container text-center g-max-width-750 g-mb-20">
         <div class="u-heading-v2-2--bottom g-brd-primary g-mb-20">
@@ -156,9 +156,9 @@
       </div>
       <br />
     </section>
-    <!-- End Section Content -->
+    <!-- End About Section Content -->
 
-    <!-- Careers Section Content -->
+    <!-- Requirements Section Content -->
     <section id="requirements" class="g-theme-bg-color-1 g-text-color-2 no-column-space">
       <div class="container-fluid">
         <div class="container text-center g-max-width-750 g-mb-20 g-pt-70">
@@ -208,28 +208,29 @@
         </div>
       </div>
     </section>
-    <!-- End Section Content -->
+    <!-- End Requirements Section Content -->
 
-    <!-- Numbers Section Content -->
+    <!-- FAQ Section Content -->
     <section id="faq">
       <div class="container-fluid">
         <div class="g-pt-100 g-pb-30">
           <div class="container text-center g-max-width-750 g-mb-20 g-pt-10">
             <div class="u-heading-v2-2--bottom g-brd-primary g-mb-20">
-              <h2 class="text-uppercase u-heading-v2__title g-font-weight-800 g-font-size-30 g-font-size-40--md">Frequently Asked Questions</h2> </div>
+              <h2 class="text-uppercase u-heading-v2__title g-font-weight-800 g-font-size-30 g-font-size-40--md">Frequently Asked Questions</h2>
+            </div>
           </div>
+          <br />
           <div class="container">
             <!-- Icon Blocks -->
             <div class="row">
-              <div class="col-md-5 g-mb-40">
+              <div class="col-sm-10 offset-sm-1 g-mb-40">
                 <!-- Icon Blocks -->
                 <div class="media">
-                  <div class="d-flex g-mt-25 g-mr-40"> <span class="d-block g-color-primary g-font-size-48 g-line-height-1">
-                      </span> </div>
+                  <div class="d-flex g-mt-25 g-mr-40"><span class="d-block g-color-primary g-font-size-48 g-line-height-1"></span></div>
                   <div class="media-body align-self-center">
                     <h3 class="h5 text-uppercase g-font-weight-800">
-                        Why would a college grad want to work at Case Consulting?
-                      </h3>
+                      Why would a college grad want to work at Case Consulting?
+                    </h3>
                     <ul class="list-unstyled g-font-size-12 g-mb-30 g-mb-0--md">
                       <li class="g-pos-rel g-pl-10 g-mb-15"> <i class="fas fa-angle-right bullet_top  g-left-0 g-font-size-16 g-color-primary"></i>
                         <p class="list_elem">
@@ -241,7 +242,9 @@
                 </div>
                 <!-- End Icon Blocks -->
               </div>
-              <div class="col-md-5 offset-md-2 g-mb-40">
+            </div>
+            <div class="row">
+              <div class="col-sm-10 offset-sm-1 g-mb-40">
                 <!-- Icon Blocks -->
                 <div class="media">
                   <div class="d-flex g-mt-25 g-mr-40"> <span class="d-block g-color-primary g-font-size-48 g-line-height-1">
@@ -266,7 +269,7 @@
             <!-- End Icon Blocks -->
             <!-- Icon Blocks -->
             <div class="row">
-              <div class="col-md-5 g-mb-40">
+              <div class="col-sm-10 offset-sm-1 g-mb-40">
                 <!-- Icon Blocks -->
                 <div class="media">
                   <div class="d-flex g-mt-25 g-mr-40"> <span class="d-block g-color-primary g-font-size-48 g-line-height-1">
@@ -287,7 +290,9 @@
                 </div>
                 <!-- End Icon Blocks -->
               </div>
-              <div class="col-md-5 offset-md-2 g-mb-40">
+            </div>
+            <div class="row">
+              <div class="col-sm-10 offset-sm-1 g-mb-40">
                 <!-- Icon Blocks -->
                 <div class="media">
                   <div class="d-flex g-mt-25 g-mr-40"> <span class="d-block g-color-primary g-font-size-48 g-line-height-1">
@@ -315,11 +320,10 @@
             </div>
             <!-- Icon Blocks -->
             <div class="row">
-              <div class="col-md-5 g-mb-40 g-mb-0--md">
+              <div class="col-sm-10 offset-sm-1 g-mb-40">
                 <!-- Icon Blocks -->
                 <div class="media">
-                  <div class="d-flex g-mt-25 g-mr-40"> <span class="d-block g-color-primary g-font-size-48 g-line-height-1">
-                      </span> </div>
+                  <div class="d-flex g-mt-25 g-mr-40"><span class="d-block g-color-primary g-font-size-48 g-line-height-1"></span></div>
                   <div class="media-body align-self-center">
                     <h3 class="h5 text-uppercase g-font-weight-800">
                         Where is the internship located?
@@ -334,7 +338,9 @@
                   </div>
                 </div>
               </div>
-              <div class="col-md-5 offset-md-2">
+            </div>
+            <div class="row">
+              <div class="col-sm-10 offset-sm-1 g-mb-40">
                 <!-- Icon Blocks -->
                 <div class="media">
                   <div class="d-flex g-mt-25 g-mr-40">
@@ -359,7 +365,7 @@
             </div>
             <!-- Icon Blocks -->
             <div class="row">
-              <div class="col-md-5 g-mb-40 g-mb-0--md">
+              <div class="col-sm-10 offset-sm-1 g-mb-40">
                 <!-- Icon Blocks -->
                 <div class="media">
                   <div class="d-flex g-mt-25 g-mr-40"> <span class="d-block g-color-primary g-font-size-48 g-line-height-1">
@@ -378,7 +384,9 @@
                   </div>
                 </div>
               </div>
-              <div class="col-md-5 offset-md-2">
+            </div>
+            <div class="row">
+              <div class="col-sm-10 offset-sm-1 g-mb-40">
                 <!-- Icon Blocks -->
                 <div class="media">
                   <div class="d-flex g-mt-25 g-mr-40"> <span class="d-block g-color-primary g-font-size-48 g-line-height-1">
@@ -401,7 +409,7 @@
               </div>
             </div>
           </div>
-        </div> <br/> <br/> <br/> <br/> <br/>
+        </div> <br/>
     </section>
 
     <section id="testimonials" class="g-theme-bg-gray-dark-v1 g-py-100">
