--- a/index.html
+++ b/index.html
@@ -680,7 +680,7 @@
           <div class="col-sm-10 offset-sm-1">
             <div class="card-deck g-mx-20 g-my-20">
               <div class="card">
-                <img class=" event-images" src="./assets/custom/img/events/2018race.jpg" alt="2018 Leesburg 5k/20k Race">
+                <img class=" event-images" src="https://res.cloudinary.com/consultwithcase/image/upload/v1535029085/website/IMG_5470.jpg" alt="2018 Leesburg 5k/20k Race">
                 <div class="card-body">
                   <h4 class="card-title"><a href="https://photos.app.goo.gl/Xz9Pd53AhmMiF6Fw5" target="_blank" rel="noopener">2018 Leesburg 5k/20k</a></h4>
                   <p class="card-text">Many employees ran in the 2018 Leesburg 5k/20k race. We also had a really fun design for the race shirt thanks to the daughter of a Case Employee!</p>
@@ -688,7 +688,7 @@
               </div>
 
               <div class="card">
-                <img class=" event-images" src="./assets/custom/img/events/2018internship.jpg" alt="2018 Summer Internship">
+                <img class=" event-images" src="https://res.cloudinary.com/consultwithcase/image/upload/v1535029084/website/IMG_5303.jpg" alt="2018 Summer Internship">
                 <div class="card-body">
                   <h4 class="card-title"><a href="https://photos.app.goo.gl/K1HsUTjAbVQ8sBUY8" target="_blank" rel="noopener">2018 Summer Internship</a></h4>
                   <p class="card-text">We had an awesome summer with our interns which included several presentations to the company, seeing Solo: A Star Wars Story, taking in a D.C. United game in a downpour, and some Top Golf!</p>
@@ -696,7 +696,7 @@
               </div>
 
               <div class="card">
-                <img class=" event-images" src="./assets/custom/img/events/solo.jpg" alt="Solo: A Star Wars Story">
+                <img class=" event-images" src="https://res.cloudinary.com/consultwithcase/image/upload/v1535029083/website/IMG_4328.jpg" alt="Solo: A Star Wars Story">
                 <div class="card-body">
                   <h4 class="card-title"><a href="https://photos.app.goo.gl/WUShWChoVdi4DCep9" target="_blank" rel="noopener">Solo: A Star Wars Story</a></h4>
                   <p class="card-text">We got the internship kicked off with a company movie event to see Solo: A Star Wars Story.</p>
