--- a/index.html
+++ b/index.html
@@ -680,7 +680,16 @@
           <div class="col-sm-10 offset-sm-1">
             <div class="card-deck g-mx-20 g-my-20">
               <div class="card">
-                <img class=" event-images" src="https://res.cloudinary.com/consultwithcase/image/upload/v1535029085/website/IMG_5470.jpg" alt="2018 Leesburg 5k/20k Race">
+                <!--<img class=" event-images" src="https://res.cloudinary.com/consultwithcase/image/upload/v1535029085/website/2018_leesburg_race.jpg" alt="2018 Leesburg 5k/20k Race">-->
+                <img class="event-images" sizes="(min-width: 30em) 28em, 100vw"
+                      srcset="https://res.cloudinary.com/consultwithcase/image/upload/f_auto,q_70,w_256/website/2018_leesburg_race.jpg 256w,
+                        https://res.cloudinary.com/consultwithcase/image/upload/f_auto,q_70,w_512/website/2018_leesburg_race.jpg 512w,
+                        https://res.cloudinary.com/consultwithcase/image/upload/f_auto,q_70,w_768/website/2018_leesburg_race.jpg 768w,
+                        https://res.cloudinary.com/consultwithcase/image/upload/f_auto,q_70,w_1024/website/2018_leesburg_race.jpg 1024w,
+                        https://res.cloudinary.com/consultwithcase/image/upload/f_auto,q_70,w_1280/website/2018_leesburg_race.jpg 1280w"
+                      src="https://res.cloudinary.com/consultwithcase/image/upload/f_auto,q_70,w_512/website/2018_leesburg_race.jpg"
+                      alt="2018 Leesburg 5k/20k Race"
+                />
                 <div class="card-body">
                   <h4 class="card-title"><a href="https://photos.app.goo.gl/Xz9Pd53AhmMiF6Fw5" target="_blank" rel="noopener">2018 Leesburg 5k/20k</a></h4>
                   <p class="card-text">Many employees ran in the 2018 Leesburg 5k/20k race. We also had a really fun design for the race shirt thanks to the daughter of a Case Employee!</p>
