--- a/index.html
+++ b/index.html
@@ -680,16 +680,7 @@
           <div class="col-sm-10 offset-sm-1">
             <div class="card-deck g-mx-20 g-my-20">
               <div class="card">
-                <!--<img class=" event-images" src="https://res.cloudinary.com/consultwithcase/image/upload/v1535029085/website/2018_leesburg_race.jpg" alt="2018 Leesburg 5k/20k Race">-->
-                <img class="event-images" sizes="(min-width: 30em) 28em, 100vw"
-                      srcset="https://res.cloudinary.com/consultwithcase/image/upload/f_auto,q_70,w_256/website/2018_leesburg_race.jpg 256w,
-                        https://res.cloudinary.com/consultwithcase/image/upload/f_auto,q_70,w_512/website/2018_leesburg_race.jpg 512w,
-                        https://res.cloudinary.com/consultwithcase/image/upload/f_auto,q_70,w_768/website/2018_leesburg_race.jpg 768w,
-                        https://res.cloudinary.com/consultwithcase/image/upload/f_auto,q_70,w_1024/website/2018_leesburg_race.jpg 1024w,
-                        https://res.cloudinary.com/consultwithcase/image/upload/f_auto,q_70,w_1280/website/2018_leesburg_race.jpg 1280w"
-                      src="https://res.cloudinary.com/consultwithcase/image/upload/f_auto,q_70,w_512/website/2018_leesburg_race.jpg"
-                      alt="2018 Leesburg 5k/20k Race"
-                />
+                <img class=" event-images" src="https://res.cloudinary.com/consultwithcase/image/upload/v1535029085/website/2018_leesburg_race.jpg" alt="2018 Leesburg 5k/20k Race">
                 <div class="card-body">
                   <h4 class="card-title"><a href="https://photos.app.goo.gl/Xz9Pd53AhmMiF6Fw5" target="_blank" rel="noopener">2018 Leesburg 5k/20k</a></h4>
                   <p class="card-text">Many employees ran in the 2018 Leesburg 5k/20k race. We also had a really fun design for the race shirt thanks to the daughter of a Case Employee!</p>
@@ -720,7 +711,7 @@
             <div class="col-sm-10 offset-sm-1">
               <div class="card-deck g-mx-20 g-my-20">
                 <div class="card">
-                  <img class=" event-images" src="./assets/custom/img/events/2017holiday_min.jpg" alt="2017 Holiday Party">
+                  <img class=" event-images" src="https://res.cloudinary.com/consultwithcase/image/upload/v1535029079/website/DSC_8859.jpg" alt="2017 Holiday Party">
                   <div class="card-body">
                     <h4 class="card-title"><a href="https://photos.app.goo.gl/2U6zL2tz3Lou17ca2" target="_blank" rel="noopener">2017 Holiday Party</a></h4>
                     <p class="card-text">Employees and loved ones enjoyed a night of bocce, bowling, food, and drinks at Pinstripes in Georgetown.</p>
@@ -728,14 +719,14 @@
                 </div>
 
                 <div class="card">
-                  <img class=" event-images" src="./assets/custom/img/events/2017reinvent_min.jpg" alt="2017 AWS re:Invent">
+                  <img class=" event-images" src="https://res.cloudinary.com/consultwithcase/image/upload/v1535029086/website/IMG_6485.jpg" alt="2017 AWS re:Invent">
                   <div class="card-body">
                     <h4 class="card-title"><a href="https://photos.app.goo.gl/wg2bTokQI4RkM3WA3" target="_blank" rel="noopener">2017 AWS re:Invent</a></h4>
                     <p class="card-text">This year we had a record number of employees go to AWS re:Invent in Las Vegas!</p>
                   </div>
                 </div>
 
-                <div class="card"> <img class=" event-images" src="./assets/custom/img/events/2017picnic_min.jpg" alt="2017 Family Picnic">
+                <div class="card"> <img class=" event-images" src="https://res.cloudinary.com/consultwithcase/image/upload/v1535029078/website/DSC_5279.jpg" alt="2017 Family Picnic">
                   <div class="card-body">
                     <h4 class="card-title"><a href="https://photos.app.goo.gl/8RefFAJ1i7EY6yqT2" target="_blank" rel="noopener">2017 Family Picnic</a></h4>
                     <p class="card-text">We always have a good time getting together with each other and our families. This year we had ponies, a bounce house, face painting, and a whole lot of fun! Thanks to everyone for coming out!</p>
@@ -749,7 +740,7 @@
             <div class="col-sm-10 offset-sm-1">
               <div class="card-deck g-mx-20 g-my-20">
                 <div class="card">
-                  <img class=" event-images" src="./assets/custom/img/events/2017csrc_min.jpg" alt="Recruiting @ VT CSRC Career Fair">
+                  <img class=" event-images" src="https://res.cloudinary.com/consultwithcase/image/upload/v1535029075/website/AB880EA9-3749-4AB6-92E8-7F05B63A6A24.jpg" alt="Recruiting @ VT CSRC Career Fair">
                   <div class="card-body">
                     <h4 class="card-title"><a href="https://photos.app.goo.gl/mckEE6nkiRxVkaGh1" target="_blank" rel="noopener">Recruiting @ VT CSRC Career Fair</a></h4>
                     <p class="card-text">Several employees attended the Virginia Tech Computer Science Resources Consortium Career Fair in search of another group of interns for the Summer of 2018!</p>
@@ -757,7 +748,7 @@
                 </div>
 
                 <div class="card">
-                  <img class=" event-images" src="./assets/custom/img/events/2017-summer-internship-min.jpg" alt="2017 Summer Internship">
+                  <img class=" event-images" src="https://res.cloudinary.com/consultwithcase/image/upload/v1535029082/website/IMG_1002.jpg" alt="2017 Summer Internship">
                   <div class="card-body">
                     <h4 class="card-title"><a href="https://goo.gl/photos/G1P76LwSpCGRwUqb6" target="_blank" rel="noopener">2017 Summer Internship</a></h4>
                     <p class="card-text">Big changes for Case Consulting in 2017 as we moved to new offices and embarked on our inaugural Summer Internship program!</p>
@@ -765,7 +756,7 @@
                 </div>
 
                 <div class="card">
-                  <img class=" event-images" src="./assets/custom/img/events/2017bptw-min.jpg" alt="2017 Best Places to Work">
+                  <img class=" event-images" src="https://res.cloudinary.com/consultwithcase/image/upload/v1535029081/website/IMG_0611.jpg" alt="2017 Best Places to Work">
                   <div class="card-body">
                     <h4 class="card-title"><a href="https://goo.gl/photos/6YXNHMP7mbY6MJid9" target="_blank" rel="noopener">2017 Best Places to Work</a></h4>
                     <p class="card-text">Several of our employees attended the Washington Business Journal's 2017 Best Places to Work ceremony in Washington D.C. </p>
@@ -779,7 +770,7 @@
             <div class="col-sm-10 offset-sm-1">
               <div class="card-deck g-mx-20 g-my-20">
                 <div class="card">
-                  <img class=" event-images" src="./assets/custom/img/events/game-night-min.jpg" alt="2017 Game Night">
+                  <img class=" event-images" src="https://res.cloudinary.com/consultwithcase/image/upload/v1535029074/website/52237478987__477B81CD-3FD9-489A-9462-DFC6F13C3CE9.jpg" alt="2017 Game Night">
                   <div class="card-body">
                     <h4 class="card-title"><a href="https://photos.app.goo.gl/xsfrqKKkmplU1D133" target="_blank" rel="noopener">Game Nights</a></h4>
                     <p class="card-text">Employees always have a good time at our monthly game nights in our wonderful office space.
@@ -788,7 +779,7 @@
                 </div>
 
                 <div class="card">
-                  <img class=" event-images" src="./assets/custom/img/events/2017serverless-min.jpg" alt="2017 Serverless Conference">
+                  <img class=" event-images" src="https://res.cloudinary.com/consultwithcase/image/upload/v1535029080/website/IMG_0110.jpg" alt="2017 Serverless Conference">
                   <div class="card-body">
                     <h4 class="card-title"><a href="https://goo.gl/photos/4T3HKxNofJPSDrqt8" target="_blank" rel="noopener">2017 Serverless Conf</a></h4>
                     <p class="card-text">Two of our employees learned a lot while taking in some of the sights at Serverless Conf in Austin, Texas!</p>
@@ -796,7 +787,7 @@
                 </div>
 
                 <div class="card">
-                  <img class=" event-images" src="./assets/custom/img/events/case-holiday-party-min.jpg" alt="2016 Holiday Party">
+                  <img class=" event-images" src="https://res.cloudinary.com/consultwithcase/image/upload/v1535029077/website/case-consulting-holiday-party-2016_30884154854_o.jpg" alt="2016 Holiday Party">
                   <div class="card-body">
                     <h4 class="card-title"> <a href="https://goo.gl/photos/BvT9SvVD4zVXMSw5A" target="_blank" rel="noopener">2016 Holiday Party</a></h4>
                     <p class="card-text">Employees and their loved ones had a great time at our annual holiday party. This year the party was held at Stone Tower Winery in Leesburg and featured an evening of giving, food, poker, and fun.</p>
@@ -810,7 +801,7 @@
             <div class="col-sm-10 offset-sm-1">
               <div class="card-deck g-mx-20 g-my-20">
                 <div class="card">
-                  <img class=" event-images" src="./assets/custom/img/events/case-family-picnic-min.jpg" alt="2016 Family Picnic">
+                  <img class=" event-images" src="https://res.cloudinary.com/consultwithcase/image/upload/v1535029073/website/2016-case-consulting-family-picnic_29175329344_o.jpg" alt="2016 Family Picnic">
                   <div class="card-body">
                     <h4 class="card-title"><a href="https://goo.gl/photos/XvmL1Vp7FEAdjzYL6" target="_blank" rel="noopener">2016 Family Picnic</a></h4>
                     <p class="card-text">Our annual Summer picnic is always a blast for employees and their families and this year was no different. The kids (and some adults) enjoyed the inflatable obstacle course and face painting.</p>
@@ -818,7 +809,7 @@
                 </div>
 
                 <div class="card">
-                  <img class=" event-images" src="./assets/custom/img/events/aws-trip-min.jpg" alt="re:Invent 2016">
+                  <img class=" event-images" src="https://res.cloudinary.com/consultwithcase/image/upload/v1535029089/website/IMG_20161130_114803187.jpg" alt="re:Invent 2016">
                   <div class="card-body">
                     <h4 class="card-title"><a href="https://goo.gl/photos/vfdM1cf6bihNDoNcA" target="_blank" rel="noopener">re:Invent 2016</a></h4>
                     <p class="card-text">Case Consulting was well represented at AWS re:Invent this year. Employees enjoyed all of the talks and after-hours events and can't wait to go back next year.</p>
@@ -826,7 +817,7 @@
                 </div>
 
                 <div class="card">
-                  <img class=" event-images" src="./assets/custom/img/events/rogue_one-min.jpg" alt="Rogue One: A Star Wars Movie">
+                  <img class=" event-images" src="https://res.cloudinary.com/consultwithcase/image/upload/v1535029090/website/IMG_20161216_164441944.jpg" alt="Rogue One: A Star Wars Movie">
                   <div class="card-body">
                     <h4 class="card-title"><a href="https://goo.gl/photos/qNT8KHuR7HTLq3tK6" target="_blank" rel="noopener">Rogue One: A Star Wars Movie</a></h4>
                     <p class="card-text">The force is strong with us as we watched Rogue One at the Alamo Drafthouse.</p>
@@ -839,14 +830,14 @@
           <div class="row">
             <div class="col-sm-10 offset-sm-1">
               <div class="card-deck justify-content-center g-mx-20 g-my-20">
-                <div class="card mw-30"> <img class=" event-images" src="./assets/custom/img/events/2015-holiday-party-min.jpg" alt="2015 Holiday Party">
+                <div class="card mw-30"> <img class=" event-images" src="https://res.cloudinary.com/consultwithcase/image/upload/v1535029076/website/case-consulting-holiday-party-2015_23844271536_o.jpg" alt="2015 Holiday Party">
                   <div class="card-body">
                     <h4 class="card-title"><a href="https://goo.gl/photos/AE3Jadpp3fcPvF4o9" target="_blank" rel="noopener">2015 Holiday Party</a></h4>
                     <p class="card-text">Employees and their loved ones enjoyed a night out at Salamander Resort and Spa to celebrate the holiday season.</p>
                   </div>
                 </div>
 
-                <div class="card mw-30"> <img class=" event-images" src="./assets/custom/img/events/starwars-trip-min.jpg" alt="Star Wars: The Force Awakens">
+                <div class="card mw-30"> <img class=" event-images" src="https://res.cloudinary.com/consultwithcase/image/upload/v1535029088/website/IMG_20151218_161108726.jpg" alt="Star Wars: The Force Awakens">
                   <div class="card-body">
                     <h4 class="card-title"><a href="https://goo.gl/photos/fkL6C2WmdvT9mFpg9" target="_blank" rel="noopener">Star Wars: The Force Awakens</a></h4>
                     <p class="card-text">Several employees viewed the latest Star Wars movie at the Udvar Hazy IMAX theater.</p>
