--- a/index.html
+++ b/index.html
@@ -696,7 +696,7 @@
               </div>
 
               <div class="card">
-                <img class=" event-images" src="https://res.cloudinary.com/consultwithcase/image/upload/v1535029083/website/IMG_4328.jpg" alt="Solo: A Star Wars Story">
+                <img class=" event-images" src="http://res.cloudinary.com/consultwithcase/image/upload/c_crop,g_custom:faces,h_738,w_1045/v1535029083/website/IMG_4328.jpg" alt="Solo: A Star Wars Story">
                 <div class="card-body">
                   <h4 class="card-title"><a href="https://photos.app.goo.gl/WUShWChoVdi4DCep9" target="_blank" rel="noopener">Solo: A Star Wars Story</a></h4>
                   <p class="card-text">We got the internship kicked off with a company movie event to see Solo: A Star Wars Story.</p>
